--- a/src/App/App.css
+++ b/src/App/App.css
@@ -22,3 +22,27 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.nav {
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+}
+
+.nav a:link {
+  padding: 20px;
+  color: #c00;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.nav a:visited {
+  color: #c00;
+}
+
+
+.nav a:hover {
+  text-decoration: underline;
+}
